<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">partyMaker</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="CreateAccount">Create account</string>
    <string name="LogIn">Log in</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="SignUp">Sign up</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="ResetPassword">Reset password</string>
    <string name="Message">message</string>
    <string name="CreateNewAccount">Create an account</string>
    <string name="UserProfile">User profile</string>
    <string name="CreateEvent">Create new event</string>
    <string name="UserSettings">User settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Profile">Profile</string>
    <string name="FullName">Full name</string>
    <string name="Activity">ACTIVITY</string>
    <string name="CreateANewParty">Create a new party</string>
    <string name="Title">TITLE</string>
    <string name="Date">DATE</string>
    <string name="PartyDes">DESCRIPTION</string>
    <string name="ApproxPrice">APPROXIMATE EVENT PRICE</string>
    <string name="Attendants">ATTENDANTS</string>
    <string name="FindVenue">FIND VENUE</string>
    <string name="Create">CREATE</string>
    <string name="EventCreated">Party has been created</string>
    <string name="Back">BACK</string>
    <string name="PartyName">Party name</string>
    <string name="Description">Description</string>
    <string name="OngoingParties">ONGOING PARTIES</string>
    <string name="MoreInfo">More information</string>
    <string name="VenueName">Venue name</string>
    <string name="VenuePrice">Price</string>
    <string name="VenueAttendants">Attendants</string>
    <string name="AddVenue">+</string>
    <string name="Settings">SETTINGS</string>
    <string name="OldPass">Old password</string>
    <string name="NewPass">New password</string>
    <string name="AddDescription">Add short description</string>
    <string name="SaveChanges">SAVE CHANGES</string>
    <string name="GeneralInfo">GENERAL INFO</string>
    <string name="VENUE">VENUE</string>
    <string name="Members">MEMBERS</string>
    <string name="Location">LOCATION</string>
    <string name="Expenses">EXPENSES</string>
    <string name="LogOut">Log out</string>
    <string name="INVITE">invite people</string>
    <string name="Notifications">Notifications</string>
    <string name="Accept">ACCEPT</string>
    <string name="Remove">REMOVE</string>
    <string name="NextTime" tools:ignore="StringEscaping">IT IS EMPTY IN HERE</string>
    <string name="LeaveParty">LEAVE PARTY</string>
    />
</resources>
