<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_createEvent"
            android:icon="@drawable/ic_add"
            android:title="@string/CreateEvent" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person"
            android:title="@string/UserProfile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/UserSettings" />
        <item
            android:id="@+id/logout_user"
            android:icon="@drawable/logout_good"
            android:title="@string/LogOut" />
    </group>

</menu>