<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/venueImage"
        android:layout_width="133dp"
        android:layout_height="119dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/venueMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@string/MoreInfo"
        android:textColor="@color/colorWordsAdditional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venueImage" />

    <TextView
        android:id="@+id/venueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/VenueName"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/venueImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/venuePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/VenuePrice"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/venueImage"
        app:layout_constraintTop_toBottomOf="@+id/venueName" />

    <TextView
        android:id="@+id/venueCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/VenueAttendants"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/venueImage"
        app:layout_constraintTop_toBottomOf="@+id/venuePrice" />

    <TextView
        android:id="@+id/addVenue"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:text="@string/AddVenue"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/venueCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venueName" />


</androidx.constraintlayout.widget.ConstraintLayout>