<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorWordsMain"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:textColor="@color/colorWordsMain"
        android:textColorHint="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <EditText
        android:id="@+id/userSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/LastName"
        android:textColor="@color/colorWordsMain"
        android:textColorHint="@color/colorWordsMain"
        android:backgroundTint="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <EditText
        android:id="@+id/userMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Email"
        android:textColor="@color/colorWordsMain"
        android:textColorHint="@color/colorWordsMain"
        android:backgroundTint="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="@+id/userSurname"
        app:layout_constraintStart_toStartOf="@+id/userSurname"
        app:layout_constraintTop_toBottomOf="@+id/userSurname" />

    <EditText
        android:id="@+id/userPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColor="@color/colorWordsMain"
        android:textColorHint="@color/colorWordsMain"
        android:backgroundTint="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="@+id/userMail"
        app:layout_constraintStart_toStartOf="@+id/userMail"
        app:layout_constraintTop_toBottomOf="@+id/userMail" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/CreateAccount"
        android:background="@drawable/loginn"
        app:layout_constraintEnd_toEndOf="@+id/userPass"
        app:layout_constraintStart_toStartOf="@+id/userPass"
        app:layout_constraintTop_toBottomOf="@+id/userPass" />

    <ImageButton
        android:id="@+id/backwardArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backward_arrow"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/CreateNewAccount"
        android:textColor="@color/colorWordsMain"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>





