<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogIn">

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColor="@color/colorWordsMain"
        android:textColorHint="@color/colorWordsMain"
        android:backgroundTint="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/colorWordsMain"
        android:textColorHint="@color/colorWordsMain"
        android:backgroundTint="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="@+id/userEmail"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/loginn"
        android:text="@string/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPass" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forgotPassword"
        android:textColor="@color/colorWordsMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPass" />

    <ImageButton
        android:id="@+id/backwardArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backward_arrow"
        android:background="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>