<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/venueImage"
            android:layout_width="165dp"
            android:layout_height="141dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/venueMoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/MoreInfo"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/venueImage" />

        <TextView
            android:id="@+id/venueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/VenueName"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:autoSizeTextType="none"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeStepGranularity="1sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/venueImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/venuePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/VenuePrice"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/venueImage"
            app:layout_constraintTop_toBottomOf="@+id/venueName" />

        <TextView
            android:id="@+id/venueCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/VenueAttendants"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:autoSizeMaxTextSize="@dimen/MaxTextSize"
            app:layout_constraintStart_toEndOf="@+id/venueImage"
            app:layout_constraintTop_toBottomOf="@+id/venuePrice" />

        <TextView
            android:id="@+id/addVenue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/AddVenue"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/venueCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/venueName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>