<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/venueImage"
        android:layout_width="165dp"
        android:layout_height="141dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/venueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:text="@string/VenueName"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/venueImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/venuePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/VenuePrice"
        android:fontFamily="@font/open_sans"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/venueImage"
        app:layout_constraintTop_toBottomOf="@+id/venueName" />

    <TextView
        android:id="@+id/venueCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/VenueAttendants"
        android:fontFamily="@font/open_sans"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/venueImage"
        app:layout_constraintTop_toBottomOf="@+id/venuePrice" />

</androidx.constraintlayout.widget.ConstraintLayout>